tdf#115012 chart: treat blank cells as zero optionally

"Blank cells", ie. formulas without values and labels will be
interpreted as zero in charts, resulting the same line charts without gaps,
as in MSO, when LibreOffice was build with the experimental
macro definition OOXML_INTEROPERABILITY_CHART_TREAT_BLANK_CELLS_AS_ZERO.

Note: this is a small difference between OpenDocument and OOXML
chart handling, and it's important only for MSO interoperability in
some mixed environments.

Change-Id: I0ba2cb46ee45427e10d025183c21f91737205798